<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <!-- Nom du Joueur 1 (en haut à gauche) -->
    <TextView
        android:id="@+id/nomJoueur1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/activity_game_label_Player1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Nom du Joueur 2 (en bas à droite) -->
    <TextView
        android:id="@+id/nomJoueur2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/activity_game_label_Player2"
        android:rotation="180"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Score du Joueur 1 (à droite, centré verticalement) -->
    <TextView
        android:id="@+id/scoreJoueur1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_game_label_score_Player1"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Score du Joueur 2 (à gauche, centré verticalement) -->
    <TextView
        android:id="@+id/scoreJoueur2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_game_label_score_Player2"
        android:textSize="80sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Question et Bouton Réponse pour Joueur 1 (au-dessus des boutons centraux) -->
    <TextView
        android:id="@+id/questionJoueur1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:rotation="180"
        android:text="@string/activity_game_label_question_Player1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/buttonUtility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/hitButtonJoueur1"
        style="@style/Button.ALL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toTopOf="@id/questionJoueur1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <!-- Boutons Rejouer et Menu (au centre) -->
    <LinearLayout
        android:id="@+id/buttonUtility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_game_bt_restart"
            android:layout_marginEnd="8dp"
            style="@style/Button.ALL"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_game_bt_Home"
            android:layout_marginStart="8dp"
            style="@style/Button.ALL"/>
    </LinearLayout>

    <!-- Question et Bouton Réponse pour Joueur 2 (en bas) -->
    <TextView
        android:id="@+id/questionJoueur2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_game_label_question_Player2"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/scoreJoueur2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/hitButtonJoueur2"
        style="@style/Button.ALL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionJoueur2"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
